# dcm-anon-vault

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  NOTICE.md  README.md  SECURITY.md  docker-compose.yml  fly.toml  kill-gate.md  monetization-gate-pass.md  pricing.md  pyproject.toml
.github/workflows/: test.yml
docs/: COMPARISON.md  api.md  compliance.md  demo.md  deploy.md  openapi.json  security.md  subprocessors.md
legal/: dpa-template.md  invoice-template.md  privacy.md  tos.md
scripts/: make_demo_dicom.py
src/dcm_anon_vault/: __init__.py  app.py  audit_chain.py  auth.py  auth_oidc.py  core.py  db.py  logging_setup.py  metrics.py  models.py  rate_limit.py  retention.py  webhook_delivery.py
src/dcm_anon_vault/routes/: __init__.py  anonymize.py  audit.py  billing.py  health.py  metrics.py  retention.py  usage.py  webhooks.py
tests/: conftest.py  test_anonymize_route.py  test_audit_chain.py  test_auth.py  test_billing.py  test_health.py  test_integration_real_dicom.py  test_logging.py  test_metrics.py  test_oidc.py  test_rate_limit.py  test_retention.py  test_usage.py  test_webhook_delivery.py
