[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcm-anon-vault"
version = "0.2.1"
description = "Hosted single-tenant DICOM pseudonymization API wrapping dcm-anonymizer (PS3.15 Basic Profile)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "César Pereiro García", email = "plusultra.dev@proton.me"}]
keywords = [
    "dicom", "pseudonymization", "anonymization", "api", "saas",
    "medical-imaging", "phi", "ps3.15", "research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "pydantic>=2.6,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "stripe>=8.0,<13.0",
    "pydicom>=3.0.2,<4.0",
    "dcm-anonymizer>=0.4.0,<0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.8",
    "build>=1.0",
    "pip-audit>=2.7",
]

[project.urls]
Homepage = "https://github.com/Ces107/dcm-anon-vault"
Source = "https://github.com/Ces107/dcm-anon-vault"
"Bug Tracker" = "https://github.com/Ces107/dcm-anon-vault/issues"
Engine = "https://github.com/Ces107/dcm-anon"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "RUF"]
ignore = [
    "E501",
    "B904",
    "B008",  # FastAPI Depends() in defaults is intentional
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"
